<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    android:background="@color/white"
    android:orientation="horizontal"
    >
    <LinearLayout
        android:id="@+id/ll_follow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <ImageView
            android:id="@+id/iv_follow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/live_home_follow_anchor"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_follow"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <ImageView
            android:id="@+id/iv_center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/live_home_live_center"
            />
        <TextView
            android:id="@+id/tv_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_center"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_video"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/iv_video"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/live_home_clip_video"
            />
        <TextView
            android:id="@+id/tv_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_video"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_research"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <ImageView
            android:id="@+id/iv_research"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/live_home_search_room"
            />
        <TextView
            android:id="@+id/tv_research"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_search"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_fenlei"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <ImageView
            android:id="@+id/iv_fenlei"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/live_home_all_category"
            />
        <TextView
            android:id="@+id/tv_fenlei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_fenlei"
            />
    </LinearLayout>
</LinearLayout>

